# desktop-organizer

./: LICENSE  README.md  pyproject.toml
src/desktop_organizer/: __init__.py  cli.py  gui.py  organizer.py
