[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktop-organizer"
version = "1.0.0"
description = "桌面文件自动整理工具 — 按类型、按日期分文件夹，清理垃圾文件"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "jiangqiuss" },
]
keywords = ["desktop", "organizer", "files", "cleanup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
desktop-organizer = "desktop_organizer.cli:main"

[project.urls]
Homepage = "https://github.com/jiangqiuss/desktop-organizer"
Repository = "https://github.com/jiangqiuss/desktop-organizer"
Issues = "https://github.com/jiangqiuss/desktop-organizer/issues"
